# code-remote

./: .pre-commit-config.yaml  README.md  docker-compose.yml  test_api.sh
backend/: .env.example  Dockerfile  Dockerfile.executor  Dockerfile.lambda  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_is_starred_to_snippets.py  0003_add_complexity_fields.py
backend/analyzer/: __init__.py  complexity.py  llm_provider.py
backend/analyzer/prompts/: complexity.txt  text_to_cypher.txt
backend/analyzer/providers/: __init__.py  gemini.py
backend/api/: __init__.py  lambda_handler.py  main.py  migrate_handler.py  neo4j_migrate_handler.py
backend/api/auth/: __init__.py  cognito.py  dependencies.py  models.py
backend/api/handlers/: __init__.py  sync_worker.py  worker.py
backend/api/models/: __init__.py  base.py  snippet.py  user.py
backend/api/routers/: analysis.py  execution.py  health.py  search.py  snippets.py  websocket.py
backend/api/schemas/: __init__.py  analysis.py  execution.py  search.py  snippet.py  sync.py
backend/api/services/: __init__.py  analyzer_service.py  cypher_generator.py  database.py  embedding_service.py  executor_service.py  fargate_executor.py  lambda_executor.py  neo4j_service.py  search_service.py  snippet_service.py  sync_service.py  user_service.py
backend/common/: __init__.py  config.py  tracing.py  websocket.py
backend/executor/: Dockerfile  __init__.py  runner.py  security.py  worker.py
backend/neo4j_migrations/: __init__.py  __main__.py  runner.py
backend/neo4j_migrations/versions/: 0001_initial_schema.py  0002_cleanup_prepopulated_complexities.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py
backend/tests/smoke/: __init__.py  conftest.py  test_smoke.py
backend/tests/unit/: __init__.py  test_analysis.py  test_analyzer.py  test_auth.py  test_config.py  test_cypher_generator.py  test_embedding_service.py  test_execution.py  test_health.py  test_runner.py  test_search_service.py  test_security.py  test_snippet_service.py  (+6 more)
(+138 files in other folders)
