[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-remote-backend"
version = "0.1.0"
description = "Remote Code Execution Engine - Backend Services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Code Remote Team" }]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "google-genai>=1.0.0",
    "pyjwt[crypto]>=2.8.0",
    "mangum>=0.17.0",  # AWS Lambda adapter for ASGI
    "boto3>=1.34.0",   # AWS SDK for Secrets Manager, Cognito, etc.
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "psycopg2-binary>=2.9.0",  # PostgreSQL sync driver (for Lambda sync worker)
    "alembic>=1.13.0",  # Database migrations
    # Neo4j
    "neo4j>=5.0.0",     # Neo4j Python driver
    # AWS X-Ray for LLM observability
    "aws-xray-sdk>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "executor", "analyzer", "common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# AST visitor methods must use PascalCase names like visit_Import per Python API
"executor/security.py" = ["N802"]
# Test files use MockService (PascalCase) for mock classes - standard pattern
"tests/**/*.py" = ["N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
